--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ header-img: img/post-bg-desk.jpg
 email: lzy18750211657@gmail@com
 description: "极鹭 | Geek-Egret 一个地处鹭岛的工作室"
 keyword: "Geek-Egret, 开发板, 上位机, 有趣的产品"
-url: "http://Geek-Egret.github.io"          # your host, for absolute URL
+url: "https://geek-egret.top"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/Geek-Egret/Geek-Egret.github.io.git" # you code repository
 
