--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Geek-Egret
 SEOTitle: 极鹭 | Geek-Egret
 header-img: img/home-header.jpg
 email: lzy18750211657@gmail@com
-description: "极鹭 | Geek-Egret 一个地处鹭岛的工作室"
+description: "极鹭 | Geek-Egret 一个坐落于 <b>鹭岛🪽</b> 的个人工作室"
 keyword: "Geek-Egret, 开发板, 上位机, 有趣的产品"
 url: "https://geek-egret.top"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
