--- a/_config.yml
+++ b/_config.yml
@@ -96,7 +96,7 @@ service-worker: true
 # Friends
 friends: [
     {
-        title: "",
-        href: ""
+        title: "0Leeeezy0",
+        href: "https://github.com/0Leeeezy0"
     }
 ]
