--- a/_config.yml
+++ b/_config.yml
@@ -96,7 +96,7 @@ service-worker: true
 # Friends
 friends: [
     {
-        title: "0Leeeezy0",
+        title: "主人のGithub仓库💕",
         href: "https://github.com/0Leeeezy0"
     }
 ]
